feat: refact and improve user manager
